src/objects/TASKRAY__Project_Task__c.object
<CustomObject>
    <description>This is the primary TaskRay object for tasks.  This object may be used to manage reports, dashboards, workflows and other native Salesforce functionality.</description>
    <fields>
        <fullName>Budget__c</fullName>
        <label>Budget</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <globalPicklist>Country</globalPicklist>
        <label>Country</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dependency_Offset__c</fullName>
        <formula>TASKRAY__trDepOffset__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dependency Offset</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <formula>TASKRAY__trDuration__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <label>Parent</label>
        <picklist>
            <picklistValues>
                <fullName>1.1 Support Growth through optimized sourcing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.2 Leadtime extreme compression Project Rapidoo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.3 Sync E2E Supply Chain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.4 Tailor made Venezuela Supply Model</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.1 Support growth through local sourcing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.2 Lean E2E Network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.1 Support Growth through Local Sourcing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.2 Lean E2E Network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.3 Benchmarked Indirects levels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.1 Guaranteed Supply security Ecuador &amp; Venezuela</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.2 Portfolio and Channel innovation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.3 Route to market redesign for growth potential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.1 Service Operational Excellence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.2 Customer Facing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.3 Customer Value Creation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.4 Boosting Business Growth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.1 Fix infra structure and product Foods&amp; IC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.2 Step change in quality culture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.3 QA as enabler for growth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.1 Talent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.2 Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.3 Skills</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.4 Culture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8.1 E2E Approach to SHE/Sustainability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8.2 Improve culture of Sustainability &amp; SHE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8.3 Excel in Superior Risk Assessment : Risk Management</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pillar_Program__c</fullName>
        <formula>TASKRAY__Project__r.TASKRAY__Project_Parent__r.TASKRAY__Project_Parent__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pillar Program</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pillar__c</fullName>
        <label>Pillar</label>
        <picklist>
            <picklistValues>
                <fullName>1. Responsive Personal care Network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Lean Home Care Network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Lean Foods Network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Agile Ice Cream Network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Customer Service Driven Supply Chain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. Superior Quality On Market</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7. One Talented and Engaged SC Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8. Sustainable Living Plan / SHE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <picklist>
            <picklistValues>
                <fullName>1.1.1 New HPC Liquids Plant in Cali</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Projects__c</fullName>
        <label>Projects</label>
        <picklist>
            <picklistValues>
                <fullName>1.1.1 New HPC Liquids Plant in Cali</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.1.2  Optimal Sourcing BOP Sachets MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.1.3 Skin Cleansing optimal sourcing for MA (Internalization, Talisman)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.1.4 Optimal Source for Mini Roll-on &amp; Clinical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.2.1 Replenishment lead-time reduction (Core promotional &amp; Innovation)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.2.2 Panama Hub (Hubble)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.3.1 Segmentation &amp; Excellence in Building blocks and Innovation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.3.2 S&amp;OP Maturity 3.0 (Alignment DPL &amp; S&amp;OP &amp; Discipline in Sales Execution)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.4.1 Optimized Product Portfolio &amp; Distribution Network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.4.2 Extreme sourcing responsiveness for VEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.4.3 Local Manufacturing in PC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.1.1 New HPC Liquids Plant in Cali + E2E Debottlenecking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.1.2 VEN local production – SW Liquids</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.1.3 White Spaces Coverage – Acquisitions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.2.1 (Serrucho) - Cost models &amp; Localization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.2.2 Lean manufacturing through %CU maximize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.2.3 (Ultralogistics) - Direct dispatches &amp; Warehouse optimization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.2.4 Non-value added complexity through SKU rationalization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.2.5 Competitor Benchmark-driven Product Optimization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.2.1 (Serrucho) Cost model, localization, In Shoring, Integration, Optimize E2E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.2.2 Resilience – Supply Security, Risk Materials/Suppliers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.2.3 (Ultralogistics) - Inbound Optimization, Arrow, Merengue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.2.4 Max. CU% and layout optimizations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.2.5 Competitor Benchmark driven product Optimization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.2.6 Sourcing Network redesign (Foods CAM)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.2.7 Cali Foods Power house (Master Plan)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.3.1 Aggressive Business Waste reduction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.2.1  Get capability &amp; launch Mono-bites</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.2.2 Home Sales Venezuela &amp; Ecuador</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.3.1 Increase distributor&apos;s capacity EC &amp; VEN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TASKRAY__Archived__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Archived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__Blocked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Blocked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__Deadline__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TASKRAY__Dependent_On__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field relates a TaskRay task to its predecessor.</description>
        <label>Dependent On</label>
        <referenceTo>TASKRAY__Project_Task__c</referenceTo>
        <relationshipLabel>TaskRay Tasks</relationshipLabel>
        <relationshipName>TaskRay_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TASKRAY__Dependent_Update_Pending__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for dependency calculations. It marks a TaskRay task as potentially requiring an update based upon its predecessor receiving an update.</description>
        <label>Dependent Update Pending</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TASKRAY__List__c</fullName>
        <label>List</label>
        <picklist>
            <picklistValues>
                <fullName>Holding</fullName>
                <color>#DDDDDD</color>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Prioritized</fullName>
                <color>#CC6600</color>
            </picklistValues>
            <picklistValues>
                <fullName>Started</fullName>
                <color>#3333FF</color>
            </picklistValues>
            <picklistValues>
                <fullName>Finished</fullName>
                <color>#009900</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TASKRAY__Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
                <color>#DDDDDD</color>
            </picklistValues>
            <picklistValues>
                <fullName>Normal</fullName>
                <color>#CC6600</color>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
                <color>#3333FF</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TASKRAY__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>TASKRAY__Project__c</referenceTo>
        <relationshipName>Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TASKRAY__RepeatCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Repeat Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__Repeat_End_Date__c</fullName>
        <label>Repeat End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TASKRAY__Repeat_Every__c</fullName>
        <label>Repeat Every</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__Repeat_Interval_Type__c</fullName>
        <label>Repeat Interval Type</label>
        <picklist>
            <picklistValues>
                <fullName>Does not repeat</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yearly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TASKRAY__Repeat_Week_Days__c</fullName>
        <label>Repeat Week Days</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__SortOrder__c</fullName>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__Status__c</fullName>
        <label>Deprecated (Do Not Use)</label>
        <picklist>
            <picklistValues>
                <fullName>Not Yet Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finished</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trCompleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trDepOffset__c</fullName>
        <label>Dependency Offset</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trDuration__c</fullName>
        <formula>IF( ISNULL(TASKRAY__trStartDate__c), 1, TASKRAY__Deadline__c - TASKRAY__trStartDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trEstimatedHours__c</fullName>
        <label>Estimated Time (hrs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trHidden__c</fullName>
        <formula>IF(OR(ISBLANK(TASKRAY__trHideUntil__c),TASKRAY__trHideUntil__c&lt;=TODAY()) , false, true)</formula>
        <label>Hidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trHideUntilOffset__c</fullName>
        <label>Hide Until (Days Before Start)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trHideUntil__c</fullName>
        <formula>IF(AND(NOT(ISBLANK(TASKRAY__trHideUntilOffset__c)),NOT(ISBLANK(TASKRAY__trStartDate__c))), TASKRAY__trStartDate__c - TASKRAY__trHideUntilOffset__c, null)</formula>
        <label>Hide Until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trIsMilestone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Milestone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trProjectSortOrder__c</fullName>
        <label>Project Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trStartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trTime_Entry_Count__c</fullName>
        <label>Time Entry Count</label>
        <summaryForeignKey>TASKRAY__trTaskTime__c.TASKRAY__Task__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trTotalTimeOnTask__c</fullName>
        <label>Actual Time (hrs)</label>
        <summarizedField>TASKRAY__trTaskTime__c.TASKRAY__Hours__c</summarizedField>
        <summaryForeignKey>TASKRAY__trTaskTime__c.TASKRAY__Task__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>pillar_programs__c</fullName>
        <formula>TASKRAY__Project__r.TASKRAY__Project_Parent__r.TASKRAY__Project_Parent__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>pillar programs</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>task_by_Pillar_Programs__c</fullName>
        <formula>TASKRAY__Project__r.TASKRAY__Project_Parent__r.TASKRAY__Project_Parent__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>task by Pillar Programs</label>
        <type>Text</type>
    </fields>
    <label>TaskRay Task</label>
    <listViews>
        <fullName>All_No_Record_Type</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>TASKRAY__Project__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
        </filters>
        <label>All (No Record Type)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Projects_With_Country_VIP</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>TASKRAY__Project__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>TASKRAY__Project_Task__c.VIP</value>
        </filters>
        <label>All Projects With Country (VIP)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Projects_with_country_s</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>TASKRAY__Project__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>TASKRAY__Project_Task__c.Strategy</value>
        </filters>
        <label>All Projects With Country (Strategy)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>TASKRAY__AllProjectTasks</fullName>
        <columns>NAME</columns>
        <columns>TASKRAY__Project__c</columns>
        <columns>Country__c</columns>
        <columns>TASKRAY__Deadline__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Project Tasks</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TaskRay Tasks</pluralLabel>
    <recordTypes>
        <fullName>Strategy</fullName>
        <active>true</active>
        <label>Strategy</label>
    </recordTypes>
    <recordTypes>
        <fullName>VIP</fullName>
        <active>true</active>
        <label>VIP</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>TASKRAY__Project_Member_added_in_TaskRay__c</fullName>
        <label>Project Contributor added in TaskRay</label>
    </sharingReasons>
    <validationRules>
        <fullName>TASKRAY__Prevent_Complete_If_Dependent_Incomplete</fullName>
        <active>false</active>
        <description>This validation rule will prevent the completion of a task when its predecessor task is incomplete.</description>
        <errorConditionFormula>ISCHANGED(TASKRAY__trCompleted__c) &amp;&amp;
TASKRAY__trCompleted__c  = TRUE &amp;&amp;  NOT(ISNULL(TASKRAY__Dependent_On__c)) &amp;&amp;  TASKRAY__Dependent_On__r.TASKRAY__trCompleted__c = false</errorConditionFormula>
        <errorMessage>This task cannot be completed because it has a predecessor task which is not complete.</errorMessage>
    </validationRules>
</CustomObject>